k8s/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  selector:
    app: menu-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
