k8s/restaurant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
